-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 17
-
Component/s: hotspot
-
b06
-
generic
-
generic
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8267381 | 11.0.13-oracle | Thomas Schatzl | P4 | Resolved | Fixed | b01 |
| JDK-8263860 | 11.0.12 | Matthias Baesken | P4 | Resolved | Fixed | b01 |
Currently we could run into an uninitialized value of expand_ms in G1CollectedHeap::expand_heap_after_young_collection() .
This would happen in case of an early return of bool G1CollectedHeap::expand(size_t expand_bytes, WorkGang* pretouch_workers, double* expand_time_ms) .
This would happen in case of an early return of bool G1CollectedHeap::expand(size_t expand_bytes, WorkGang* pretouch_workers, double* expand_time_ms) .
- backported by
-
JDK-8263860 do not use uninitialized expand_ms value in G1CollectedHeap::expand_heap_after_young_collection
-
- Resolved
-
-
JDK-8267381 do not use uninitialized expand_ms value in G1CollectedHeap::expand_heap_after_young_collection
-
- Resolved
-