8259983: do not use uninitialized expand_ms value in G1CollectedHeap::expand_heap_after_young_collection Reviewed-by: kbarrett, lucy